--- a/Assignment 2/Assignment 2.vcxproj.filters
+++ b/Assignment 2/Assignment 2.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\Algorithms\ArcadiaEngine.cpp">
+    <ClCompile Include="ArcadiaEngine.c++">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Downloads\Algorithms\ArcadiaEngine.h">
+    <ClInclude Include="ArcadiaEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
